Minimise use of external dependencies