@@ -9,7 +9,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -41,8 +40,8 @@ public class DriverController {
     @ApiResponses(value = {@ApiResponse(responseCode = "200", description = "Successfully employed driver"), @ApiResponse(responseCode = "409", description = "Driver conflicted with a driver that already exists")})
     public ResponseEntity<EmployDriverResponse> employDriver(@RequestBody EmployDriverRequest employDriverRequest) {
         //Check that the request is valid.
-        if (StringUtils.isBlank(employDriverRequest.getCompany()) || StringUtils.isBlank(employDriverRequest.getName())
-                || StringUtils.isBlank(employDriverRequest.getStartDate()) || employDriverRequest.getContractedHours() <= 0) {
+        if (employDriverRequest.getCompany().isBlank() || employDriverRequest.getName().isBlank()
+                || employDriverRequest.getStartDate().isBlank() || employDriverRequest.getContractedHours() <= 0) {
             return ResponseEntity.badRequest().build();
         }
         //Check that this driver does not already exist.
@@ -78,7 +77,7 @@ public class DriverController {
     @ApiResponses(value = {@ApiResponse(responseCode="200",description="Successfully deleted driver")})
     public ResponseEntity<Void> deleteDriver (final String company, final String name ) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company) && StringUtils.isBlank(name)) {
+        if (company.isBlank() && name.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Delete the driver.
