@@ -8,7 +8,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -38,9 +37,9 @@ public class MessageController {
     @ApiResponses(value = {@ApiResponse(responseCode="201",description="Successfully created message")})
     public ResponseEntity<Void> addMessage (@RequestBody final MessageRequest messageRequest ) {
         //First of all, check if any of the fields are empty or null, then return bad request.
-        if (StringUtils.isBlank(messageRequest.getCompany()) || StringUtils.isBlank(messageRequest.getDateTime())
-                || StringUtils.isBlank(messageRequest.getFolder()) || StringUtils.isBlank(messageRequest.getSender())
-                || StringUtils.isBlank(messageRequest.getSubject()) || StringUtils.isBlank(messageRequest.getText())) {
+        if (messageRequest.getCompany().isBlank() || messageRequest.getDateTime().isBlank()
+                || messageRequest.getFolder().isBlank() || messageRequest.getSender().isBlank()
+                || messageRequest.getSubject().isBlank() || messageRequest.getText().isBlank()) {
             return ResponseEntity.badRequest().build();
         }
         //Now create message object and save to message service. Return 201 if saved successfully.
