@@ -10,7 +10,6 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -46,7 +45,7 @@ public class MessagesController {
     @ApiResponses(value = {@ApiResponse(responseCode="200",description="Successfully returned messages"), @ApiResponse(responseCode="204",description="Successful but no messages found")})
     public ResponseEntity<MessagesResponse> getMessages (final String company, final Optional<String> folder, final Optional<String> sender, final Optional<String> date ) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company)) {
+        if (company.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Retrieve the messages.
@@ -82,7 +81,7 @@ public class MessagesController {
     @ApiResponses(value = {@ApiResponse(responseCode="200",description="Successfully deleted messages"),@ApiResponse(responseCode="204",description="Successful but no messages found")})
     public ResponseEntity<Void> deleteMessagesByCompany (final String company ) {
         //First of all, check if the company field is empty or null, then return bad request.
-        if (StringUtils.isBlank(company)) {
+        if (company.isBlank()) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
         //Retrieve the messages for this company.
